--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-icons/all-files": "^4.1.0",
     "@tanstack/react-query": "^5.17.19",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
